--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ script:
 - bundle exec rake $CHECK
 bundler_args: "--without system_tests"
 rvm:
-- 2.4.1
+- 2.5.3
 env:
   matrix:
-  - PUPPET_GEM_VERSION="~> 5.0" CHECK=spec
+  - PUPPET_GEM_VERSION="~> 6.0" CHECK=spec
   global:
 matrix:
   fast_finish: true
@@ -28,6 +28,8 @@ matrix:
   - env: CHECK=spec
   - env: PUPPET_GEM_VERSION="~> 4.0" CHECK=spec
     rvm: 2.3.4
+  - env: PUPPET_GEM_VERSION="~> 5.0" CHECK=spec
+    rvm: 2.4.1
 branches:
   only:
   - master
